<?xml version="1.0"?>
<package format="2">
  <name>rm_position_controller</name>
  <version>0.1.11</version>
  <description>A package for accurate position control.</description>
  <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
  <license>BSD</license>
  <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>controller_interface</depend>
  <depend>effort_controllers</depend>
  <depend>rm_common</depend>

  <export>
    <controller_interface
            plugin="${prefix}/rm_position_controller_plugins.xml"/>
  </export>
</package>
